fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ nav a:hover, nav a:active {
 article {
 	width: 70%;
 	float: left;
+	overflow: auto;
 }
 
 article #left {
